# prime_check

./: CMakeLists.txt  algorithms.cpp  algorithms.h  main.cpp
